Deployments/APIMGateway/apim-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apim-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:  
  rules:
  - host: apim-smoke.wkshpdev.com
    http:
      paths:      
      - path: /status/?(.*)
        backend:
          serviceName: aks-workshop-gateway
          servicePort: 80
  - host: apim-dev.wkshpdev.com
    http:
      paths:            
      - path: /?(.*)
        backend:
          serviceName: aks-workshop-gateway
          servicePort: 80      
  - host: apim-qa.wkshpdev.com
    http:
      paths:            
      - path: /?(.*)
        backend:
          serviceName: aks-workshop-gateway
          servicePort: 80
